--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -16,7 +16,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Wellbeing"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".UpdateDataActivity"
+            android:exported="false" />
         <activity
             android:name=".GetDateActivity"
             android:exported="false"
@@ -35,7 +38,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Wellbeing" >
+            android:theme="@style/Theme.Wellbeing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
