--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,21 +21,21 @@
             android:name=".UpdateDataActivity"
             android:exported="false" />
         <activity
-            android:name=".GetDateActivity"
+            android:name=".activity.GetDateActivity"
             android:exported="false"
             android:theme="@style/Theme.Wellbeing" />
         <activity
-            android:name=".ListActivity"
+            android:name=".activity.ListActivity"
             android:exported="false"
             android:label="@string/title_activity_list_activir"
             android:theme="@style/Theme.Wellbeing" />
         <activity
-            android:name=".ScheduleActivity"
+            android:name=".activity.ScheduleActivity"
             android:exported="false"
             android:label="@string/title_activity_schedule"
             android:theme="@style/Theme.Wellbeing" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Wellbeing">
