--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,6 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".UpdateDataActivity"
-            android:exported="false" />
-        <activity
             android:name=".activity.GetDateActivity"
             android:exported="false"
             android:theme="@style/Theme.Wellbeing" />
@@ -30,7 +27,7 @@
             android:label="@string/title_activity_list_activir"
             android:theme="@style/Theme.Wellbeing" />
         <activity
-            android:name=".activity.ScheduleActivity"
+            android:name=".activity.GraphActivity"
             android:exported="false"
             android:label="@string/title_activity_schedule"
             android:theme="@style/Theme.Wellbeing" />
